--- a/boot.css
+++ b/boot.css
@@ -128,3 +128,116 @@ overflow: hidden;
     background-color:greenyellow;
 }
 
+.features{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 50px;
+}
+
+.feature{
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   text-align: center;
+}
+
+.featureimg{
+    width: 50px;
+    height: 50px;
+}
+
+.featuretitle{
+    font-size: 20px;
+    font-weight: 600;
+    margin: 20px;
+}
+
+.featuredesc{
+    color: rgb(110, 8, 8);
+    width: 50%;
+    height: 100px;
+}
+
+.product{
+    height: 100vh;
+    background-color: whitesmoke;
+    position:relative;
+
+}
+.productimg{
+    width: 20%;
+    padding-left: 10%;
+    padding-top: 5%;
+}
+
+.productdetails{
+    position: absolute;
+    top: 10%;
+    right: 0;
+    width: 40%;
+    padding: 50px;
+
+}
+.producttitle{
+    font-size: 75px;
+    font-weight: 900;
+}
+
+.productdesc{
+    font-size:24px;
+    color: gray;
+}
+.colors,.sizes{
+    display: flex;
+    padding-left: 56%;
+}
+.color{
+    width: 32px;
+    height: 32px;
+    border-radius: 5px;
+    background-color:gray;
+}
+
+.productbutton{
+    margin-left: 56%;
+    margin-top: .5%;
+    font-weight: 900;
+    color:rgb(205, 54, 79);
+    background-color: whitesmoke;
+    border-radius: 7px;
+    width: 100px;
+    height: 30px;
+
+}
+
+.productbutton:hover{
+    color: pink;
+    background-color:  rgb(3, 13, 59);
+    border: 50%;
+    cursor:pointer;
+}
+
+.color{
+    width: 32px;
+    height: 32px;
+    border-radius: 5px;
+    background-color: black;
+    margin-right:10px;
+
+}
+
+.color:last-child{
+    background-color: rgb(4, 4, 55) ;
+}
+
+.size{
+    padding: 5px 20px;
+    border: 1px solid black;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-right: 10px;
+    cursor: pointer;
+    font-size: 20px;
+
+}
