--- a/boot.css
+++ b/boot.css
@@ -1,3 +1,6 @@
+html{
+    scroll-behavior: smooth;
+}
 body{
     font-family: 'Roboto', sans-serif;
     padding: 0;
@@ -239,5 +242,4 @@ overflow: hidden;
     margin-right: 10px;
     cursor: pointer;
     font-size: 20px;
-
 }
